--- a/WAV/Info.plist
+++ b/WAV/Info.plist
@@ -8,6 +8,13 @@
 	<array>
 		<string>pixelmix.ttf</string>
 	</array>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UISceneConfigurations</key>
+		<dict/>
+	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
