--- a/WAV/Info.plist
+++ b/WAV/Info.plist
@@ -7,6 +7,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>pixelmix.ttf</string>
+		<string>pixelmix_bold.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
