fix marquee colors

--- a/WAV/Info.plist
+++ b/WAV/Info.plist
@@ -20,5 +20,9 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
